--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "beforeCommit": "npm run type-check && npm run lint && npm run format"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.2.7",
+    "@supabase/supabase-js": "^2.44.3",
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -33,6 +35,7 @@
     "husky": "^9.0.11",
     "postcss": "^8.4.39",
     "prettier": "3.3.2",
+    "supabase": "^1.183.5",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
     "vite": "^5.3.1"
