--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.2.7",
     "@supabase/supabase-js": "^2.44.3",
+    "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
